<resources>
    <string name="app_name">Check Boxes</string>
    <string name="invitation">Выберите способ оплаты:</string>
    <string name="input_money">Введите сумму</string>
    <string name="bank_card">Банковская карта</string>
    <string name="mobile_phone">Мобильный телефон</string>
    <string name="cash">Наличными по адресу</string>
    <string name="payment_info">Информация о платеже</string>
    <string name="pay_button">Оплатить</string>
</resources>
