<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtInputMoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/input_money"
            android:inputType="textPersonName"
            android:textAllCaps="false"
            android:typeface="normal" />

        <TextView
            android:id="@+id/txtInvitation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invitation"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/chkBxBankCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bank_card" />

        <CheckBox
            android:id="@+id/chkBxMobilePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile_phone" />

        <CheckBox
            android:id="@+id/chkBxCash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cash" />

        <EditText
            android:id="@+id/txtPaymentInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/payment_info"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnPay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#8BC34A"
            android:text="@string/pay_button" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>